fix: Header vertical alignment

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,3 +1,4 @@
 .logo {
   margin-right: 62px;
+  line-height: 0;
 }
